--- a/backend/Makefile
+++ b/backend/Makefile
@@ -2,10 +2,6 @@
 i-requirements:
 	pip install -r requirements.txt
 
-.PHONY: env-variables-export
-env-variables-export:
-	. env-variables.sh
-
 .PHONY: run-api-locally
-run-api-locally: env-variables-export
-	OFFLINE=true sls offline --reloadHandler
+run-api-locally:
+	./start-api.sh
