--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "Brickly serverless application",
   "author": "Muhammad Ali Gulzar",
   "dependencies": {
-    "serverless-offline": "^12.0.1"
+    "serverless-offline": "^12.0.1",
+    "serverless-python-requirements": "^6.0.0"
   }
 }
