--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "author": "Muhammad Ali Gulzar",
   "dependencies": {
     "serverless-offline": "^12.0.1",
+    "serverless-plugin-utils": "^0.2.0",
     "serverless-python-requirements": "^6.0.0"
   }
 }
