--- a/backend/serverless.yaml
+++ b/backend/serverless.yaml
@@ -6,10 +6,10 @@ provider:
   region: ap-south-1
   stage: ${opt:stage}
   environment:
-    ENVIRONMENT: ${opt:stage}
+    STAGE: ${opt:stage}
+    ENVIRONMENT: ${upper(${opt:stage})}
     DB_HOST: ${self:custom.environment.DB_HOST.${self:provider.stage}}
     DB_USER: ${self:custom.environment.DB_USER.${self:provider.stage}}
-    DB_PASSWORD: ${self:custom.environment.DB_PASSWORD.${self:provider.stage}}
     DB_NAME: ${self:custom.environment.DB_NAME.${self:provider.stage}}
   iam:
     role: ${env:IAM_ROLE_ARN}
@@ -22,8 +22,6 @@ custom:
       dev: "brickly-database-dev.cv7vbjo3n63b.ap-south-1.rds.amazonaws.com"
     DB_USER:
       dev: "brickly_admin"
-    DB_PASSWORD:
-      dev: ${env:DATABASE_PWD}
     DB_NAME:
       dev: "brickly_database_dev"
   pythonRequirements:
@@ -41,6 +39,7 @@ functions:
 plugins:
   - serverless-offline
   - serverless-python-requirements
+  - serverless-plugin-utils
 
 package:
   individually: true
