--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: deploy
+name: deploy serverless application
 
 on:
   push:
@@ -6,22 +6,27 @@ on:
       - master
 
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-  - uses: actions/checkout@v1
-  
-  - name: Use Node.js ${{ matrix.node-version }}
-    uses: actions/setup-node@v1
-    with:
-      node-version: 12.x
+  deploy:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
 
-  - name: install dependencies
-    run: cd backend && npm install
+    - name: install dependencies
+      run: cd backend && npm install
 
-  - name: serverless deploy
-    run: cd backend && make deploy
-    env:
-      ENVIRONMENT: dev
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      IAM_ROLE_ARN: ${{ secrets.IAM_ROLE_ARN }}
+    - name: serverless deploy
+      uses: serverless/github-action@v3.1
+      run: cd backend && make deploy
+      env:
+        ENVIRONMENT: dev
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        IAM_ROLE_ARN: ${{ secrets.IAM_ROLE_ARN }}
