fix: use shell bash when deploying serverless application

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
       run: cd backend && npm install
 
     - name: serverless deploy
+      shell: bash
       run: cd backend && make deploy
       env:
         ENVIRONMENT: dev
