--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       run: cd backend && npm install
 
     - name: serverless deploy
-      run: cd backend && make deploy
+      run: cd backend && source scripts.sh; deploy_api
       env:
         ENVIRONMENT: dev
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
