--- a/backend/serverless.yaml
+++ b/backend/serverless.yaml
@@ -35,6 +35,13 @@ functions:
       - http:
           method: ANY
           path: /{proxy+}
+  create_database:
+    handler: services.database.create_database
+    events:
+      - http:
+          path: /function_create_database
+          method: get
+      - schedule: cron(0 23 ? * MON-FRI *)
 
 plugins:
   - serverless-offline
