addition: otp functionality with black and isort python code

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -6,6 +6,14 @@ i-requirements:
 run-api-locally:
 	. scripts.sh; start_api
 
+.PHONY: start-dynamo-db
+start-dynamo-db:
+	. scripts.sh; start_dynamo_db
+
 .PHONY: deploy
 deploy:
 	. scripts.sh; deploy_api
+
+.PHONY: format
+format:
+	black . && isort .
