--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "Brickly serverless application",
   "author": "Muhammad Ali Gulzar",
   "dependencies": {
+    "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^12.0.1",
+    "serverless-offline-sns": "^0.76.0",
     "serverless-plugin-utils": "^0.2.0",
     "serverless-python-requirements": "^6.0.0"
   }
